--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-        <%- include('./components/nav') %>
+        <%- include('../components/nav') %>
 
         <div class="csmain" id="container">
           <% if(link) %>
@@ -18,10 +18,11 @@
         </div>
 
         <div class="csfoot">
-          <%- include('./components/footer') %>
+          <%- include('../components/footer') %>
         </div>
 
 
   <script src="/stylesheets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="/javascripts/typeahead.min.js"></script>
 </body>
 </html>
