--- a/views/backend/pages/submitter/edit.ejs
+++ b/views/backend/pages/submitter/edit.ejs
@@ -24,7 +24,7 @@
                   <div class="form-group">
                     <label>User Photo :</label>
                     <div class="custom-file">
-                      <input type="file" class="custom-file-input customFileImg" id="customFileImg" name="customFileImg">
+                      <input type="file" class="custom-file-input customFileImg" id="customFileImg" name="customFileImg" accept=""/>
                       <label class="custom-file-label" for="customFileImg">Choose file</label>
                     </div>
                   </div>
