--- a/views/backend/pages/submitter/home.ejs
+++ b/views/backend/pages/submitter/home.ejs
@@ -7,8 +7,8 @@
       <div class="alert alert-danger" role="alert"><%- messages.error %></div>
       <% } %>
 
-      <div class="card">
-          <div class="card-header">
+      <div class="card" style="min-height:660px; overflow: scroll;">
+        <div class="card-header sticky-top bg-white">
               <ul class="nav nav-pills w-100">
                   <li class="nav-pill active">
                       <a class="nav-link">Users</a>
