--- a/views/frontend/pages/auth/login.ejs
+++ b/views/frontend/pages/auth/login.ejs
@@ -1,5 +1,5 @@
 
-<div class="mx-auto m-5 w-25 h-50 pt-5 pb-5">
+<div class="mx-auto m-5 w-25 vh-75 pt-5 pb-5">
   <form action="auth/authentication" method="post" name="form1" class="m-5">
 
     <div class="form-group">
