--- a/views/backend/pages/books/home.ejs
+++ b/views/backend/pages/books/home.ejs
@@ -1,4 +1,3 @@
-
     <% if (messages.success) { %>
       <div class="alert alert-success" role="alert"><%- messages.success %></div>
       <% } %>
@@ -7,8 +6,8 @@
       <div class="alert alert-danger" role="alert"><%- messages.error %></div>
       <% } %>
 
-      <div class="card">
-          <div class="card-header">
+      <div class="card mt-4" style="height: 640px; overflow: scroll;">
+          <div class="card-header sticky-top bg-white">
               <ul class="nav nav-pills w-100">
                   <li class="nav-pill active">
                       <a class="nav-link">Books</a>
@@ -18,7 +17,7 @@
                   </li>
               </ul>
           </div>
-      <div class="card-body">
+        <div class="card-body">
 
           <% if(data.length) { %>
           <table class="table">
@@ -51,7 +50,7 @@
               <p class="text-center">No book found!</p>
           <% } %>
 
-          </div>
+        </div>
       </div>
 
     <script>
