--- a/views/backend/pages/submitter/add.ejs
+++ b/views/backend/pages/submitter/add.ejs
@@ -23,10 +23,11 @@
                 </div>
                   <div class="form-group">
                     <label>User Profile:</label>
-                    <div class="custom-file">
+                    <input class="form-control" type="file" name="uploaded_image" accept=""/>
+                    <!-- <div class="custom-file">
                       <input type="file" class="custom-file-input customFileImg" id="customFileImg" name="customFileImg">
                       <label class="custom-file-label" for="customFileImg">Choose file</label>
-                    </div>
+                    </div> -->
                   </div>
                   <div class="form-group">
                       <input type="submit" class="btn btn-info" value="Add"/>
